# DeskLauncher

./: index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
src/: index.scss  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: hardware.rs  lib.rs  main.rs  software.rs
src/components/common/Segmented/: index.vue
src/components/common/loading/: index.vue
src/components/ui/card/: Card.vue  CardHeader.vue
src/layout/: MainLayout.vue
src/menu/: SidebarNav.vue
src/router/: index.ts
src/views/Hardware/: index.vue
src/views/Home/: index.vue
src/views/Home/components/DateTime/: index.vue
src/views/Home/components/SystemApps/: index.vue
src/views/Settings/: index.vue
src/views/Software/: index.vue
