[package]
name = "desk-launcher"
version = "0.1.0"
description = "DeskLauncher - A desktop launcher application"
authors = []
edition = "2021"

[lib]
name = "desk_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
base64 = "0.22"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
